<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="4dp"
    android:background="@color/white"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_4sdp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profilePic"
            android:layout_width="@dimen/_54sdp"
            android:layout_height="@dimen/_54sdp"
            android:src="@drawable/ic_guest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profilePic"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profileNameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameTV"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/genderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/_gender"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profilePic"
            app:layout_constraintTop_toBottomOf="@+id/nameTV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profileGenderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@+id/genderTV"
            app:layout_constraintTop_toTopOf="@+id/genderTV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/_email"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profilePic"
            app:layout_constraintTop_toBottomOf="@+id/profileGenderTV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profileEmailTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/emailTV"
            app:layout_constraintTop_toTopOf="@+id/emailTV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/addressTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/_address"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/profileAddressTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profilePic"
            app:layout_constraintTop_toBottomOf="@+id/emailTV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profileAddressTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:ellipsize="marquee"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/addressTV"
            app:layout_constraintTop_toBottomOf="@+id/emailTV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/phoneTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/_phone"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profilePic"
            app:layout_constraintTop_toBottomOf="@+id/addressTV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profilePhoneTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:ellipsize="marquee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/phoneTV"
            app:layout_constraintTop_toTopOf="@+id/phoneTV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/descTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/_desc"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profilePic"
            app:layout_constraintTop_toBottomOf="@+id/phoneTV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profileDescTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:maxLines="3"
            android:text="@string/desc"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/descTV"
            app:layout_constraintTop_toTopOf="@+id/descTV" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>